# Clean-Chain-Reaction

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/chainreaction/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bot.cpp  bot.h  game.cpp  game.h  jni_bridge.cpp
app/src/main/java/com/example/chainreaction/: GameScreen.kt  GameViewModel.kt  MainActivity.kt  OrbAnimationEvent.kt  StartScreen.kt
app/src/main/java/com/example/chainreaction/ui/theme/: Color.kt  Theme.kt  Typography.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/chainreaction/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
